fix: apply correct drop alignment class

--- a/css/partials/ProxyField.css
+++ b/css/partials/ProxyField.css
@@ -21,7 +21,7 @@
 
   &.bk-is-horizontal {
     > .bk-field-list-proxy-list {
-      @apply flex gap-15;
+      @apply flex gap-15 flex-wrap;
     }
   }
 
